# haskell-first-principals

./: .gitignore  LICENSE  README.md  haskell-first-principals.code-workspace
cabal-seed-projects/: cabal-seed-project.sh
ch-03/: ch-03.code-workspace
ch-03/hello-haskell/: CHANGELOG.md  README.md  hello-haskell.cabal  myscript.sh
ch-03/hello-haskell/test/: Foo.hs
ch-03/myfirstapp/: README.md
ch-04/: Global.hs  Print02.hs  Print03Flipped.hs  ch-04.code-workspace
ch-04/strings/: CHANGELOG.md  README.md  strings.cabal
ch-05/: DataTypes02.hs  ch-05.code-workspace
ch-05/basic-data-types/: CHANGELOG.md  README.md  basic-data-types.cabal
ch-06/: TypeInference01.hs  ch-06.code-workspace
ch-06/type-inference/: README.md  type-inference.cabal
ch-06/types/: CHANGELOG.md  README.md  types.cabal
ch-07/: Complexity.hs  DayOfWeek.hs  EqInstances.hs  Numberish.hs  ParameterizedDataTypes.hs  ch-07.code-workspace
ch-07/type-classes/: CHANGELOG.md  README.md  type-classes.cabal
ch-07/type-classes/app/: Main.hs
ch-07/type-classes/src/: Complexity.hs  DayOfWeek.hs  Numberish.hs  ParameterizedDataType.hs
ch-08/: EmployeeRank.hs  Grades.hs  TupleFunctions.hs  ch-08.code-workspace
ch-08/functions/: CHANGELOG.md  README.md  functions.cabal
ch-09/: ch-09.code-workspace
ch-09/exercises/: README.md  exercises.cabal
ch-09/recursion/: CHANGELOG.md  LICENSE  README.md  recursion.cabal
ch-09/recursion/src/: Doodles.hs  Lib.hs  WordNumber.hs
ch-09/recursion/test/: TestSuite.hs  WordNumberTest.hs
ch-10/: ch-10.code-workspace
ch-10/cipher-app/: CHANGELOG.md  README.md  cipher-app.cabal
ch-10/cipher-app/app/: Main.hs
ch-10/cipher-app/src/: Lib.hs  Lists.hs
ch-10/cipher-app/test/: Spec.hs
ch-10/lists/: README.md  lists.cabal
ch-11/: Exercises.hs  ch-11.code-workspace
ch-11/folds/: CHANGELOG.md  README.md  folds.cabal
ch-12/: DataTypes.hs  Deconstruction.hs  EitherExample.hs  Kinds.hs  PhoneExercise.hs  TypeInhabitantCalculation.hs  ch-12.code-workspace
ch-12/algebraic-data-types/: CHANGELOG.md  README.md  algrbraic-data-types.cabal
ch-12/data-types/: CHANGELOG.md  README.md  data-types.cabal
ch-13/: ch-13.code-workspace
ch-13/calling-project/: CHANGELOG.md  README.md  cabal.project  calling-project.cabal
ch-13/dependent-project/: CHANGELOG.md  README.md  dependent-project.cabal
ch-13/dependent-project/src/: Lib.hs
ch-13/hangman-app/: CHANGELOG.md  README.md  hangman-app.cabal
ch-13/hangman-app/app/: Main.hs
ch-13/hangman-app/src/: Lib.hs
ch-13/hangman-app/test/: Spec.hs
ch-13/hello-haskell/: README.md  hello-haskell.cabal
ch-13/hello-haskell/app/: Main.hs
ch-13/palindrome-app/: CHANGELOG.md  README.md  palindrome-app.cabal
ch-13/palindrome-app/app/: Main.hs
ch-13/palindrome-app/src/: Lib.hs
ch-13/person-app/: CHANGELOG.md  README.md  person-app.cabal
ch-13/person-app/app/: Main.hs
ch-13/person-app/src/: Lib.hs
ch-13/root-project/: CHANGELOG.md  README.md  (+2 more)
ch-14/: ch-14.code-workspace
ch-14/arithmetic-app/: CHANGELOG.md  README.md  arithmetic-app.cabal
ch-14/arithmetic-app/app/: Main.hs
ch-14/arithmetic-app/src/: ArbitraryInstances.hs  Arithmetic.hs
ch-14/morse-code-app/: CHANGELOG.md  README.md  morse-code-app.cabal
ch-14/morse-code-app/app/: Main.hs
ch-14/morse-code-app/src/: Morse.hs
ch-14/morse-code-app/tests/: Tests.hs
ch-14/testing/: README.md  testing.cabal
ch-15/: ch-15.code-workspace
ch-16/: ch-16.code-workspace
ch-16/functor-exercises/: CHANGELOG.md  README.md  functor-exercises.cabal
ch-16/functors/: README.md  functors.cabal
ch-16/functors/src/: Doodles.hs  IgnoringPossibilities.hs  Lib.hs  ReplaceExperiment.hs
ch-17/: ch-17.code-workspace
ch-17/applicative/: CHANGELOG.md  README.md  applicative.cabal
ch-17/applicative/src/: Cow.hs  Doodles.hs  Lib.hs  Person.hs  TaggedUnionTypes.hs  ZipList.hs
ch-18/: ch-18.code-workspace
ch-18/monad-exercises/: CHANGELOG.md  README.md  monad-exercises.cabal
ch-18/monad-exercises/src/: Cow.hs  Doodles.hs  Lib.hs  Outcome.hs  SoftwareShop.hs  Zed.hs
ch-19/: ch-19.code-workspace
ch-19/applying-structure/: CHANGELOG.md  README.md  applying-structure.cabal
ch-19/url-shortener/: README.md  url-shortener.cabal
ch-19/url-shortener/app/: Main.hs
ch-19/url-shortener/src/: Doodles.hs  URLShortener.hs
ch-20/: ch-20.code-workspace
ch-21/: ch-21.code-workspace
ch-21/traversable/: CHANGELOG.md  README.md  traversable.cabal
ch-21/traversable/src/: Eval.hs  Exercises.hs  HttpLib.hs
ch-22/: ch-22.code-workspace
ch-22/reader-exercises/: CHANGELOG.md  README.md  reader-exercises.cabal
ch-22/reader-exercises/app/: Main.hs
ch-22/reader-exercises/src/: DPIExample.hs  Doodles.hs  FunctionReader.hs
ch-22/url-shortener/: CHANGELOG.md  url-shortener.cabal
ch-22/url-shortener/app/: Main.hs
ch-22/url-shortener/src/: URLShortener.hs  URLShortenerAlt.hs
ch-22/url-shortener/test/: TestSuite.hs
ch-23/: ch-23.code-workspace
ch-24/: ch-24.code-workspace
ch-24/parser-combinators/: CHANGELOG.md  README.md  parser-combinators.cabal
ch-24/parser-combinators/app/: Main.hs
ch-24/parser-combinators/src/: Beginnings.hs  Combinators.hs  Continuations.hs  DOTParser.hs  FractionParser.hs  HTMLParser.hs  INIConfigParser.hs  IPv4AddressParser.hs  IPv6AddressParser.hs  IntegerDoubleParser.hs  IntegerStringParser.hs  JSONParser.hs  LogParser.hs  PolymorphicParser.hs  SemanticVersionParser.hs  TokenParser.hs  UTCTimeConversions.hs
ch-24/parser-combinators/test/: TestSuite.hs
ch-25/: ch-25.code-workspace
ch-26/: ch-26.code-workspace
ch-26/monad-transformers/: CHANGELOG.md  README.md  monad-transformers.cabal
ch-26/monad-transformers/src/: ChapterExercises.hs  EitherTExample.hs  EitherTransformer.hs  EquivalenceTest.hs  ExceptTExample.hs  GuessingGame.hs  HitCounter.hs  Lib.hs  MaybeTExample.hs  MaybeTransformer.hs  MonadIO.hs  MonadTrans.hs  MonadTransStack.hs  MonadTransformerStackExample.hs  MoraGame.hs  OuterInner.hs  ReaderTransformer.hs  Scotty.hs  StackemHigh.hs  StateTransformer.hs  SumOfGuesses.hs
ch-29/: ch-29.code-workspace
(+125 files in other folders)
