cabal-version:      3.0
name:               hello-haskell
version:            0.1.0.0
license:            NONE
author:             jan_abt@yahoo.com
maintainer:         ja-cha
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common commons
    ghc-options: -Wall
    build-depends:     base ^>=4.18.1.0 && < 5, 
                      Cabal ^>=3.10.2.1,
                 QuickCheck ^>=2.14.3, 
                      HUnit
    default-language: Haskell2010

executable myfirstapp
    import:           commons
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    haskell-say ^>=1.0.0.0
    hs-source-dirs:   app

Test-Suite test-foo
    import:           commons
    type:             exitcode-stdio-1.0
    main-is:          Foo.hs
    hs-source-dirs:   test    

-- ALTERNATIVE CONFIGURATIOM
-- Test-Suite test-bar
--     import:           commons
--     type:             detailed-0.9
--     hs-source-dirs:   test
--     test-module:      Bar
    