cabal-version:      3.0
name:               recursion
version:            0.1.0.0
synopsis:           My Recursion Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.3.0
    
library
    import:           common-all
    exposed-modules:  Lib, Doodles, Recursion, WordNumber
    hs-source-dirs:   src
    

executable foldable-exercises
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   src, app
                   

test-suite test-app
    import:           common-all
    other-modules:    Lib, WordNumber
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:   
                      hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3,
                      checkers ^>=0.6.0 
