cabal-version:      3.0
name:               cipher-app
version:            0.1.0.0
synopsis:           My Cipher App Project 
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
   build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
    hspec, 
    QuickCheck
  default-language: GHC2021
  ghc-options:      -Wall

library
  import:           common-all 
  exposed-modules:  Lib
  hs-source-dirs:   src

executable cipher-app
  import:           common-all
  main-is:          Main.hs
  other-modules:    Lib
  hs-source-dirs:   app, src
  
Test-Suite spec
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test, src
  test-module:      Spec
  other-modules:    Lib
  
    