cabal-version:      3.0
name:               dependent-project
version:            0.1.0.0
synopsis:           My Dependent Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:


common common-all
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1                     
    default-language: GHC2021
    ghc-options:      -Wall    


library
    import:           common-all 
    exposed-modules:  Lib
    hs-source-dirs:   src


executable hello-haskell
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   app
