cabal-version:      3.0
name:               palindrome-app
version:            0.1.0.0
synopsis:           My Palindorme App Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common all
    ghc-options: -Wall
    default-language: GHC2021
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.3.0


library
    import:           all
    exposed-modules:  Lib
    -- other-modules:
    -- other-extensions:

executable palindrome-app
    import:           all
    main-is:          Main.hs
    other-modules:    Lib
    -- other-extensions:
    hs-source-dirs:   app
