cabal-version:      3.0
name:               testing
version:            0.1.0.0
synopsis:           My Testing Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common-all
    ghc-options: -Wall
    default-language: GHC2021

Test-Suite chapter-tests
    import:           common-all
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Tests.hs
    build-depends:    base ^>=4.18.1.0 && < 5, 
                      Cabal ^>=3.10.2.1,
                      containers,
                      hspec,
                      QuickCheck  