cabal-version:      3.0
name:               functors
version:            0.1.0.0
synopsis:           My Functors Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.3.0 
    
library
    import:           common-all
    exposed-modules:  Lib, ReplaceExperiment, Doodles, IgnoringPossibilities
    hs-source-dirs:   src
    build-depends:    hspec,
                      QuickCheck 
                
executable functor-exercises
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   src, app
    build-depends:    hspec,
                      QuickCheck

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    hspec,
                      QuickCheck
