cabal-version:      3.0
name:               applying-structure
version:            0.1.0.0
synopsis:           Synopsis of applying-structure
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    
library
    import:           common-all
    exposed-modules:  Lib, Doodles
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck,
                      checkers ^>=0.6.0 ,
                      scotty ^>= 0.21, 
                      time ^>=1.12.2, 
                      uuid ^>=1.3.15,
                      text ^>=2.0.2,
                      network ^>=3.1.4.0,
                      utf8-string ^>=1.0.2
                
executable applying-structure
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   src, app
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck
