cabal-version:      3.0
name:               reader-exercises
version:            0.1.0.0
synopsis:           Synopsis of reader-exercises
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    
library
    import:           common-all
    exposed-modules:  Lib, Doodles, Exercises, Reader', DogAndPerson, DPIExample, FunctionReader, ReaderPractice
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      mtl ^>=2.3.1,
                      transformers ^>=0.6.1.1,
                      containers ^>=0.6.7,
                      QuickCheck,
                      checkers ^>=0.6.0 
                    
                
executable reader-exercises
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   src, app
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck
