cabal-version:      3.0
name:               url-shortener
version:            0.1.0.0
synopsis:           Synopsis of url-shortener
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs 
    default-language: GHC2021
    
library
    import:           common-all
    exposed-modules:  URLShortener
    hs-source-dirs:   src
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck,
                      checkers ^>=0.6.0,                      
                      bytestring,
                      hedis,
                      mtl,
                      network-uri,
                      random,
                      scotty,
                      semigroups,
                      text,
                      transformers 
                
executable url-shortener
    import:           common-all
    ghc-options: -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   src, app
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      hspec,
                      QuickCheck
