cabal-version:      3.0
name:               parser-combinators
version:            0.1.0.0
synopsis:           Synopsis of parser-combinators
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1
    
library
    import:           common-all
    exposed-modules:  Beginnings, Combinators, Continuations, DOTParser, FractionParser, 
                      HTMLParser, IntegerStringParser, IntegerDoubleParser, 
                      INIConfigParser, TokenParser, IPv4AddressParser, IPv6AddressParser, JSONParser, PolymorphicParser, 
                      LogParser, SemanticVersionParser,  UTCTimeConversions
    hs-source-dirs:   src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3,
                      checkers ^>=0.6.0,
                      attoparsec ^>= 0.14.4,
                      trifecta ^>=2.1.3,
                      parsec ^>=3.1.17.0,
                      raw-strings-qq ^>=1.1,
                      parsers ^>=0.12.11, 
                      bytestring ^>=0.12.0, 
                      text ^>=2.1,
                      containers ^>=0.6.8, 
                      aeson ^>= 2.2.1.0, 
                      time ^>=1.12.2, 
                      regex-compat ^>=0.95.2.1
                
executable parser-combinators
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib, Doodles
    hs-source-dirs:   app, src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   test, src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3