cabal-version:      3.0
name:               monad-transformers
version:            0.1.0.0
synopsis:           My Monad Tranformers Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      transformers-either ^>=0.1.4,
                      transformers ^>=0.6.1.1, 
                      containers ^>=0.6.7,
                      unliftio-core ^>=0.2.1.0,
                      mtl ^>=2.3.1,
                      text ^>=2.0.2                
library
    import:           common-all
    exposed-modules:  MaybeTransformer, EitherTransformer, ReaderTransformer, StateTransformer, 
                      OuterInner, Scotty, Lib, MonadTrans, MonadIO, MaybeTExample, EitherTExample,
                      ExceptTExample, EquivalenceTest, MonadTransformerStackExample, ChapterExercises,
                      HitCounter
    hs-source-dirs:   src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3,
                      checkers ^>=0.6.0, 
                      text,
                      scotty ^>= 0.21

executable monad-transformers
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib, Doodles
    hs-source-dirs:   app, src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3
