cabal-version:      3.0
name:               monad-transformers
version:            0.1.0.0
synopsis:           My Monad Tranformers Project
license:            MIT
license-file:       LICENSE
author:             ja-cha
maintainer:         jan_abt@yahoo.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-all
    ghc-options: -Wall -fwarn-tabs
    default-language: GHC2021
    build-depends:    base ^>=4.18.1.0 && < 5,
                      Cabal ^>=3.10.2.1,
                      random == 1.2.1.1,
                      transformers-either ^>=0.1.4,
                      transformers ^>=0.6.1.1, 
                      containers ^>=0.6.7,
                      unliftio-core ^>=0.2.1.0,
                      mtl ^>=2.3.1,
                      text ^>=2.0.2,
                      bytestring ^>=0.12.1.0,                      
                      servant, 
                      directory ^>=1.3.8.1,
                      unix ^>=2.8.5.0,
                      http-client ^>=0.7.16,
                      network ^>=3.1.4.0,
                      filepath,
                      servant-server,
                      servant-multipart ^>=0.12.1,
                      servant-multipart-api ^>=0.12.1,
                      warp ,
                      wai-extra ^>=3.1.6,      
                      aeson ^>=2.2.1.0,    
                      unliftio ^>=0.2.25.0,            
                      yaml ^>=0.11.11.2               
library
    import:           common-all
    exposed-modules:  MaybeTransformer, EitherTransformer, ReaderTransformer, StateTransformer, 
                      OuterInner, Scotty, Lib, MonadTrans, MonadIO, MaybeTExample, EitherTExample,
                      ExceptTExample, EquivalenceTest, MonadTransStack, ChapterExercises,
                      HitCounter, SumOfGuesses, MoraGame, StackemHigh
    hs-source-dirs:   src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3,
                      checkers ^>=0.6.0, 
                      text,
                      scotty ^>= 0.21

executable monad-transformers
    import:           common-all
    main-is:          Main.hs
    other-modules:    Lib
    hs-source-dirs:   app, src
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3

test-suite test-app
    import:           common-all
    other-modules:    Lib
    type:             exitcode-stdio-1.0
    main-is:          TestSuite.hs
    hs-source-dirs:   src, test
    build-depends:    hspec ^>= 2.11.7,
                      QuickCheck ^>= 2.14.3
